--- a/.github/workflows/github-runner.yaml
+++ b/.github/workflows/github-runner.yaml
@@ -32,12 +32,14 @@ jobs:
           for i in $(seq 1 $(( ${JOBChildIndex} + 1 ))); do
             echo "Job Number: $i"
           done
+        continue-on-error: true
 
       - name: Get runner environment information
         run: |
           echo "Runner Environment Information:"
           cat /etc/os-release
           cat /etc awk -v RS='\n' '{print $0}' those files are available in this directory
+        continue-on-error: true
 
       - name: Get UID information
         run: |
