--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -4,5 +4,19 @@ on:
   workflow_call:
 jobs:
 
-  test-runner-environment:
+  codebuild:
     uses: ./.github/workflows/codebuild-runner.yaml
+
+  github:
+    uses: ./.github/workflows/github-runner.yaml
+
+  codebuild2:
+    needs:
+      - codebuild
+      - github
+    uses: ./.github/workflows/codebuild-runner.yaml
+
+  github2:
+    needs:
+      - github2
+    uses: ./.github/workflows/github-runner.yaml    
