--- a/.github/workflows/github-runner.yaml
+++ b/.github/workflows/github-runner.yaml
@@ -2,11 +2,6 @@ name: Github Runner
 on: 
   workflow_call:
 jobs:
-  Hello-World-Job:
-    runs-on: ubuntu-latest  
-    steps:
-      - run: echo "Hello World"
-
   test-runner-environment:
     runs-on: ubuntu-latest
     steps:
@@ -49,3 +44,33 @@ jobs:
           echo "UID Information:"
           id $USER
 
+      - name: Get workflow settings
+        run: |
+          echo "Workflow settings:"
+          actions/checkout --non-interactive
+
+      - name: Get Available drives
+        run: |
+          echo "Available drives:"
+          github actions/drive --non-interactive
+
+      - name: Debug information
+        run: |
+          echo "Debug information:"
+          github actions/run --debug
+
+     - name: Repository information
+       run: |
+         echo "Repository information:"
+         github actions(repository)
+
+
+     - name: Config information
+       run: |
+         echo "Config information:"
+         github actions(config)
+
+     - name: Repository information
+       run: |
+         echo "Repository information:"
+         github actions/rest-api /repos/{owner}/{repo}/events
