--- a/.github/workflows/build-deploy-dev.yaml
+++ b/.github/workflows/build-deploy-dev.yaml
@@ -16,7 +16,7 @@ permissions:
 jobs:
 
   semantic-release:
-    uses:  ./github/workflows/semantic-release.yml
+    uses:  ./.github/workflows/semantic-release.yml
     permissions:
       actions: read
       contents: write
@@ -26,7 +26,7 @@ jobs:
       - build
       
   build:
-    uses: ./build.yml
+    uses:  ./.github/workflows/build.yml
     permissions:
       id-token: write
       actions: read
@@ -37,7 +37,7 @@ jobs:
 
   deploy:
     if: github.ref_name == 'main'
-    uses: ./deploy.yml
+    uses:  ./.github/workflows/deploy.yml
     needs:
       - build
     permissions:
