--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -17,15 +17,11 @@ jobs:
 
   deploy:
     if: github.ref_name == 'main'
-    uses: ./deploy.yml
-    needs:
-      - build
+    uses:  ./.github/workflows/deploy.yml
     permissions:
       id-token: write
       actions: read
       contents: read
       packages: read
       security-events: write
-    with:
-      environment: dev
     secrets: inherit
