--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -26,8 +26,10 @@ jobs:
         id: generate-token
         uses: actions/create-github-app-token@v1
         with: 
-          app-id: ${{ secrets.GHAPP_REPO_ACCESS_APP_ID }}
-          private-key: ${{ secrets.GHAPP_REPO_ACCESS_APP_KEY }}
+          # app-id: ${{ secrets.GHAPP_REPO_ACCESS_APP_ID }}
+          app-id: 1163418
+          # private-key: ${{ secrets.GHAPP_REPO_ACCESS_APP_KEY }}
+          private-key: 986b8fdfabd0342235f4da2002f44acdeb2513d2
           owner: ${{ github.repository_owner }}        
   
 
