--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -27,9 +27,9 @@ jobs:
         uses: actions/create-github-app-token@v1
         with: 
           # app-id: ${{ secrets.GHAPP_REPO_ACCESS_APP_ID }}
-          app-id: 1163418
+          app-id: "1163418"
           # private-key: ${{ secrets.GHAPP_REPO_ACCESS_APP_KEY }}
-          private-key: 986b8fdfabd0342235f4da2002f44acdeb2513d2
+          private-key: "986b8fdfabd0342235f4da2002f44acdeb2513d2"
           owner: ${{ github.repository_owner }}        
   
 
