--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -47,19 +47,19 @@ jobs:
         id: get_tag_name
         run: echo "TAG_NAME=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
-      # - name: Generate Release Notes
-      #   uses: actions/github-script@v6
-      #   id: generate_release_notes
-      #   with:
-      #     script: |
-      #       const { owner, repo } = context.repo;
-      #       const tag = "${{ steps.get_tag_name.outputs.TAG_NAME }}";
-      #       const response = await github.rest.repos.generateReleaseNotes({
-      #         owner,
-      #         repo,
-      #         tag_name: tag,
-      #       });
-      #       return response.data.body;
+      - name: Generate Release Notes
+        uses: actions/github-script@v6
+        id: generate_release_notes
+        with:
+          script: |
+            const { owner, repo } = context.repo;
+            const tag = "${{ steps.get_tag_name.outputs.TAG_NAME }}";
+            const response = await github.rest.repos.generateReleaseNotes({
+              owner,
+              repo,
+              tag_name: tag,
+            });
+            return response.data.body;
 
       # - name: Create Release
       #   uses: actions/create-release@v1
