--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -39,6 +39,9 @@ jobs:
 
   create_release:
     runs-on: ubuntu-latest
+    needs:
+      - create_release
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
