--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -39,8 +39,8 @@ jobs:
 
   create_release:
     runs-on: ubuntu-latest
-    needs:
-      - create_release
+    # needs:
+    #   - create_release
 
     steps:
       - name: Checkout code
