--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -68,13 +68,13 @@ jobs:
         run: |
           echo "The value of MY_VARIABLE is: ${{ steps.generate_release_notes.outputs }}"
 
-      # - name: Create Release
-      #   uses: actions/create-release@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-      #   with:
-      #     tag_name: ${{ steps.get_tag_name.outputs.TAG_NAME }}
-      #     release_name: Release ${{ steps.get_tag_name.outputs.TAG_NAME }}
-      #     body: ${{ steps.generate_release_notes.outputs }}
-      #     draft: false
-      #     prerelease: ${{ startsWith(steps.get_tag_name.outputs.TAG_NAME, 'v0.') }}
+      - name: Create Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+          tag_name: ${{ steps.get_tag_name.outputs.TAG_NAME }}
+          release_name: Release ${{ steps.get_tag_name.outputs.TAG_NAME }}
+          body: ${{ steps.generate_release_notes.outputs }}
+          draft: false
+          prerelease: ${{ startsWith(steps.get_tag_name.outputs.TAG_NAME, 'v0.') }}
