--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -15,7 +15,7 @@ permissions:
 jobs:
   create-version:
     runs-on: ubuntu-latest
-
+    if: github.ref == 'refs/heads/main'
     env:
       GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
@@ -39,6 +39,7 @@ jobs:
 
   create_release:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     needs:
       - create-version
 
