--- a/.github/workflows/codebuild-runner.yaml
+++ b/.github/workflows/codebuild-runner.yaml
@@ -38,22 +38,22 @@ jobs:
       #     done
       #   continue-on-error: true
 
-      # - name: Get runner environment information
-      #   run: |
-      #     echo "Runner Environment Information:"
-      #     cat /etc/os-release
-      #     cat /etc awk -v RS='\n' '{print $0}' those files are available in this directory
-      #   continue-on-error: true
+      - name: Get runner environment information
+        run: |
+          echo "Runner Environment Information:"
+          cat /etc/os-release
+          cat /etc awk -v RS='\n' '{print $0}' those files are available in this directory
+        continue-on-error: true
         
-      # - name: Get UID information
-      #   run: |
-      #     echo "UID Information:"
-      #     id $USER
+      - name: Get UID information
+        run: |
+          echo "UID Information:"
+          id $USER
 
-      # - name: Get workflow settings
-      #   run: |
-      #     echo "Workflow settings:"
-      #     actions/checkout --non-interactive
+      - name: Get workflow settings
+        run: |
+          echo "Workflow settings:"
+          actions/checkout --non-interactive
 
       # - name: Get Available drives
       #   run: |
