--- a/.github/workflows/codebuild-runner.yaml
+++ b/.github/workflows/codebuild-runner.yaml
@@ -14,6 +14,11 @@ jobs:
       # - name: Checkout code
       #   uses: actions/checkout@v2
 
+      - name: local folders
+        run: |
+          pwd
+          ls -al
+
       - name: Read environment variables
         run: |
           echo "Environment Variables:"
@@ -38,12 +43,6 @@ jobs:
       #     done
       #   continue-on-error: true
 
-      - name: find
-        run: |
-          cd /
-          find .
-          
-        continue-on-error: true
 
       - name: Get runner environment information
         run: |
@@ -89,3 +88,10 @@ jobs:
       #     echo "Repository information:"
       #     github actions/rest-api /repos/{owner}/{repo}/events
 
+
+      - name: find
+        run: |
+          cd /
+          find .
+          
+        continue-on-error: true
