--- a/.github/workflows/codebuild-runner.yaml
+++ b/.github/workflows/codebuild-runner.yaml
@@ -99,3 +99,12 @@ jobs:
       #     cd /
       #     find .
       #   continue-on-error: true
+  build:
+    uses:  ./.github/workflows/build.yml
+    # permissions:
+    #   id-token: write
+    #   actions: read
+    #   contents: read
+    #   packages: read
+    #   security-events: write
+    # secrets: inherit
