--- a/.github/workflows/codebuild-runner.yaml
+++ b/.github/workflows/codebuild-runner.yaml
@@ -100,7 +100,7 @@ jobs:
       #     find .
       #   continue-on-error: true
   build:
-    uses:  ./.github/workflows/build.yml
+    uses:  ./.github/workflows/codebuild-build.yml
     # permissions:
     #   id-token: write
     #   actions: read
