--- a/.github/workflows/codebuild-runner.yaml
+++ b/.github/workflows/codebuild-runner.yaml
@@ -10,8 +10,14 @@ jobs:
     runs-on:
       - codebuild-yrdy-${{ github.run_id }}-${{ github.run_attempt }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+
+      # - name: Checkout code
+      #   uses: actions/checkout@v2
+
+      - name: local folders
+        run: |
+          pwd
+          ls -al
 
       - name: Read environment variables
         run: |
@@ -26,22 +32,22 @@ jobs:
           export MY_VAR=Hello World
           echo $MY_VAR
 
-      - name: Execute workflow over multiple jobs
-        env:
-          JOB_NAME: job1
-          JOBChildIndex: 0
-        run: |
-          echo "Executing workflow over multiple jobs..."
-          for i in $(seq 1 $(( ${JOBChildIndex} + 1 ))); do
-            echo "Job Number: $i"
-          done
-        continue-on-error: true
+      # - name: Execute workflow over multiple jobs
+      #   env:
+      #     JOB_NAME: job1
+      #     JOBChildIndex: 0
+      #   run: |
+      #     echo "Executing workflow over multiple jobs..."
+      #     for i in $(seq 1 $(( ${JOBChildIndex} + 1 ))); do
+      #       echo "Job Number: $i"
+      #     done
+      #   continue-on-error: true
+
 
       - name: Get runner environment information
         run: |
           echo "Runner Environment Information:"
           cat /etc/os-release
-          cat /etc awk -v RS='\n' '{print $0}' those files are available in this directory
         continue-on-error: true
         
       - name: Get UID information
@@ -49,34 +55,57 @@ jobs:
           echo "UID Information:"
           id $USER
 
-      - name: Get workflow settings
+      - name: Clone Repo
         run: |
           echo "Workflow settings:"
-          actions/checkout --non-interactive
+          git clone https://github.com/voidraven-public/public.git
+          # actions/checkout --non-interactive
 
-      - name: Get Available drives
+      - name: repo folders
         run: |
-          echo "Available drives:"
-          github actions/drive --non-interactive
+          pwd
+          ls -al
+          find public
 
-      - name: Debug information
-        run: |
-          echo "Debug information:"
-          github actions/run --debug
+      # - name: Get Available drives
+      #   run: |
+      #     echo "Available drives:"
+      #     github actions/drive --non-interactive
 
-      - name: Repository information
-        run: |
-          echo "Repository information:"
-          github actions(repository)
+      # - name: Debug information
+      #   run: |
+      #     echo "Debug information:"
+      #     github actions/run --debug
+
+      # - name: Repository information
+      #   run: |
+      #     echo "Repository information:"
+      #     github actions(repository)
 
 
-      - name: Config information
-        run: |
-          echo "Config information:"
-          github actions(config)
+      # - name: Config information
+      #   run: |
+      #     echo "Config information:"
+      #     github actions(config)
 
-      - name: Repository information
-        run: |
-          echo "Repository information:"
-          github actions/rest-api /repos/{owner}/{repo}/events
+      # - name: Repository information
+      #   run: |
+      #     echo "Repository information:"
+      #     github actions/rest-api /repos/{owner}/{repo}/events
 
+
+      # - name: find
+      #   run: |
+      #     cd /
+      #     find .
+      #   continue-on-error: true
+
+  build:
+    uses:  ./.github/workflows/codebuild-build.yml
+    # permissions:
+    #   id-token: write
+    #   actions: read
+    #   contents: read
+    #   packages: read
+    #   security-events: write
+    # secrets: inherit
