--- a/.github/workflows/codebuild-runner.yaml
+++ b/.github/workflows/codebuild-runner.yaml
@@ -129,8 +129,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+      - name: Check version
+        run: |
+          node --version
 
-          
+
 
   codebuild-setup-python:
     runs-on:
@@ -138,7 +141,11 @@ jobs:
     steps:
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
+          python-version: '3'
+      - name: Check version
+        run: |
+          python --version
+
 
   codebuild-upload-artifact:
     runs-on:
