--- a/.github/workflows/codebuild-runner.yaml
+++ b/.github/workflows/codebuild-runner.yaml
@@ -16,9 +16,9 @@ jobs:
       - name: Set output in job1
         id: set-output-job
         run: |
-          echo "my-output=Codebuild Build Output from Job 1" >> $GITHUB_ENV
+          echo "::set-output name=codebuild-output::Codebuild Build Output from Job 1"
     outputs:
-      my-output: ${{ steps.set-output-job.outputs.my-output }}
+      codebuild-output: ${{ steps.set-output-job.outputs.codebuild-output }}
 
   job2:
     runs-on: ubuntu-latest
@@ -26,7 +26,7 @@ jobs:
     steps:
       - name: Print output from Job 1
         run: |
-          echo "Output from Job 1: ${{ needs.codebuild-set-output.outputs.my-output }}"      
+          echo "Output from Job 1: ${{ needs.codebuild-set-output.outputs.codebuild-output }}"      
 
   github-set-output:
     runs-on:
@@ -114,7 +114,7 @@ jobs:
     steps:
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.11.0'
       - name: Check version
         run: |
           python --version
