--- a/.github/workflows/codebuild-runner.yaml
+++ b/.github/workflows/codebuild-runner.yaml
@@ -16,17 +16,9 @@ jobs:
       - name: Set output in job1
         id: set-output-job
         run: |
-          echo "::set-output name=codebuild-output::Codebuild Build Output from Job 1"
+          echo "::set-output name=codebuild-output::Codebuild Build Output"
     outputs:
       codebuild-output: ${{ steps.set-output-job.outputs.codebuild-output }}
-
-  job2:
-    runs-on: ubuntu-latest
-    needs: codebuild-set-output
-    steps:
-      - name: Print output from Job 1
-        run: |
-          echo "Output from Job 1: ${{ needs.codebuild-set-output.outputs.codebuild-output }}"      
 
   github-set-output:
     runs-on:
@@ -35,10 +27,9 @@ jobs:
       - name: Set output in job1
         id: set-output-job
         run: |
-          echo "my-output=Github Build Output from Job 1" >> $GITHUB_ENV
-
+          echo "::set-output name=github-output::Github Build Output"
     outputs:
-      my-output: ${{ steps.set-output-job.outputs.my-output }}
+      github-output: ${{ steps.set-output-job.outputs.github-output }}
 
   codebuild-environment:
     needs:
@@ -48,8 +39,10 @@ jobs:
       - codebuild-yrdy-${{ github.run_id }}-${{ github.run_attempt }}
     steps:
 
-      # - name: Checkout code
-      #   uses: actions/checkout@v2
+      - name: Outputs From Previous Steps
+        run: |
+          echo "Codebuild Output: ${{ needs.codebuild-set-output.outputs.codebuild-output }}"      
+          echo "Github Output: ${{ needs.github-set-output.outputs.github-output }}"      
 
       - name: local folders
         run: |
@@ -69,6 +62,38 @@ jobs:
           export MY_VAR=Hello World
           echo $MY_VAR
 
+  github-environment:
+    needs:
+      - codebuild-set-output
+      - github-set-output
+    runs-on:
+      - ubuntu-latest
+    steps:
+
+      - name: Outputs From Previous Steps
+        run: |
+          echo "Codebuild Output: ${{ needs.codebuild-set-output.outputs.codebuild-output }}"      
+          echo "Github Output: ${{ needs.github-set-output.outputs.github-output }}"    
+
+      - name: local folders
+        run: |
+          pwd
+          ls -al
+
+      - name: Read environment variables
+        run: |
+          echo "Environment Variables:"
+          for key in $(env -i); do
+            echo "$key"
+          done
+
+      - name: Write environment variables
+        run: |
+          echo "Writing environment variables..."
+          export MY_VAR=Hello World
+          echo $MY_VAR
+
+          
   codebuild-checkout-repository:
     runs-on:
       - codebuild-yrdy-${{ github.run_id }}-${{ github.run_attempt }}
