--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -14,7 +14,7 @@ jobs:
   lint-and-test:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: ['3.9', '3.10', '3.11']
         exclude:
           - os: windows-latest
